<resources>
    <string name="app_name">iTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sign in</string>
    <string name="nav_header_subtitle">Login with WeChat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_moments">Moments</string>
    <string name="menu_widgets">Widgets</string>
    <string name="menu_color">Color</string>
    <string name="menu_prime">Prime</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
</resources>
