<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_moment"
            android:title="@string/menu_moments" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/menu_widget"
            android:title="@string/menu_widgets" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/menu_color"
            android:title="@string/menu_color" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/menu_prime"
            android:title="@string/menu_prime" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_lock"
                android:icon="@drawable/menu_lock"
                android:title="Lock" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
